--- a/arch/arm/configs/gucci_defconfig
+++ b/arch/arm/configs/gucci_defconfig
@@ -26,12 +26,12 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
-CONFIG_OPROFILE=m
-CONFIG_KPROBES=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+#CONFIG_OPROFILE=m
+#CONFIG_KPROBES=y
+#CONFIG_MODULES=y
+#CONFIG_MODULE_UNLOAD=y
+#CONFIG_MODULE_FORCE_UNLOAD=y
+#CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
@@ -57,7 +57,7 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_CC_STACKPROTECTOR=y
-CONFIG_CP_ACCESS=y
+#CONFIG_CP_ACCESS=y
 CONFIG_ARM_DECOMPRESSOR_LIMIT=0x3200000
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -88,7 +88,7 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
-CONFIG_IPV6=y
+#CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -247,7 +247,7 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_EVBUG=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -261,7 +261,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 #CONFIG_SENSORS_LIS3DH=y
 #CONFIG_SENSORS_MPU6050=y
 CONFIG_SENSORS_LSM6DS0=y
@@ -274,8 +274,8 @@ CONFIG_SENSORS_LTR559=y
 # CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 CONFIG_SERIAL_MSM_SMD=y
-CONFIG_DIAG_CHAR=y
-CONFIG_HW_RANDOM=y
+#CONFIG_DIAG_CHAR=y
+#CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_I2C=y
@@ -284,7 +284,7 @@ CONFIG_I2C_MSM_V2=y
 CONFIG_SLIMBUS=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -323,7 +323,7 @@ CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_RADIO_SUPPORT=y
+#CONFIG_MEDIA_RADIO_SUPPORT=y
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
@@ -343,7 +343,7 @@ CONFIG_OV5645=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_FB=y
@@ -354,7 +354,7 @@ CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
+#CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -400,8 +400,8 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+CONFIG_MMC_TEST=y
+CONFIG_MMC_BLOCK_TEST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -437,8 +437,8 @@ CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
+#CONFIG_MOBICORE_SUPPORT=y
+CONFIG_MOBICORE_API=y
 CONFIG_SENSORS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
@@ -489,7 +489,7 @@ CONFIG_IPC_LOGGING=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_DEBUG_USER=y
 CONFIG_EARLY_PRINTK=y
-CONFIG_DEBUG_SET_MODULE_RONX=y
+#CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
@@ -498,14 +498,14 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_TWOFISH=y
-CONFIG_CRYPTO_DEV_QCRYPTO=m
+CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_SHA256=y
-CONFIG_MSM_BUSPM_DEV=m
+CONFIG_MSM_BUSPM_DEV=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_FORCE_INSTRUCTION_ALIGNMENT=y
